# Jira_Confluence_Ticketing

./: README.md  main.py  pyproject.toml  requirements.txt  test_jira.py
src/sprint_reporter/: crew.py  main.py  tools.py
src/sprint_reporter/config/: agents.yaml  crew.yaml  tasks.yaml
