[project]
name = "sprint_reporter"
version = "0.1.0"
description = "Sprint Reporter Jira to Confluence"
requires-python = ">=3.12"
dependencies = [
  "crewai[tools]",
  "atlassian-python-api",
  "python-dotenv",
  "openai"
]

[project.scripts]
run_crew = "sprint_reporter.main:main"  # ← CLAVE: apunta a función main()
